--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -18,7 +18,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">SampleTools</a>
 			</div>
-			<form method="post" th:action="@{/logout}">
+			<form method="post" th:action="@{'/logout'}">
 				<button class="btn btn-link pull-right navbar-brand" type="submit">ログアウト</button>
 			</form>
 		</div>
