--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -12,42 +12,43 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <title>Home</title>
 </head>
 <body>
-<!-- Header -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+<!-- header -->
+	<nav class="navbar fixed-top navbar-dark bg-dark">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">SampleTools</a>
+				<a class="navbar-brand" href="#">SpringSample</a>
 			</div>
-			<form method="post" th:action="@{'/logout'}">
+			<form method="post" th:action="@{/logout}">
 				<button class="btn btn-link pull-right navbar-brand" type="submit">ログアウト</button>
 			</form>
 		</div>
 	</nav>
-<!-- Side Bar -->
-	<div class="container-fluid">
+<!-- sidebar -->
+	<div class="containar-fluid">
 		<div class="row">
-			<div class="col-sm-2 sidebar">
-				<ul class="nav nav-pills nav-stacked">
-					<li>
-					<a th:href="@{'/itemPage'}">商品マスタ</a>
+			<div class="col-md-2 sidebar">
+				<ul class="navbar-nav">
+					<li class="nav-item" role="presentation">
+					<a th:href="@{/dateLog}">賞味期限管理</a>
 					</li>
-					<li>
-					<a th:href="@{'/componentPage'}">構成品マスタ</a>
+					<li class="nav-item" role="presentation">
+					<a th:href="@{/userList}">ユーザー管理</a>
 					</li>
-					<li>
-					<a th:href="@{'/dateLogPage'}">賞味期限管理</a>
+					<li class="nav-item" role="presentation">
+					<a th:href="@{/itemPage}">商品マスタ</a>
+					</li>
+					<li class="nav-item" role="presentation">
+					<a th:href="@{/componentPage}">構成品マスタ</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
-<!-- Contents -->
-	<div class="container-fluid">
+<!-- contents -->
+	<div class="containar-fluid">
 		<div class="row">
-			<div class="col-sm-10 col-sm-offset-2 main">
-				<div th:include="__${contents}__">
-					<!-- 動的に変更させる部分 -->
-				</div>
+			<div class="col-md-10 offset-2 main">
+				<div th:include="__${contents}__"></div>
 			</div>
 		</div>
 	</div>
