fix sidebar link of userMaster

--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -32,13 +32,13 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					<a th:href="@{/dateLog}">賞味期限管理</a>
 					</li>
 					<li class="nav-item" role="presentation">
-					<a th:href="@{/userList}">ユーザー管理</a>
+					<a th:href="@{/userMaster}">ユーザー管理</a>
 					</li>
 					<li class="nav-item" role="presentation">
-					<a th:href="@{/itemPage}">商品マスタ</a>
+					<a th:href="@{/itemMaster}">商品マスタ</a>
 					</li>
 					<li class="nav-item" role="presentation">
-					<a th:href="@{/componentPage}">構成品マスタ</a>
+					<a th:href="@{/componentMaster}">構成品マスタ</a>
 					</li>
 				</ul>
 			</div>
