--- a/src/main/resources/templates/manage/userMaster.html
+++ b/src/main/resources/templates/manage/userMaster.html
@@ -9,14 +9,16 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 		<div class="page-header">
 			<h1>ユーザー閲覧画面</h1>
 			<form method="post" th:action="@{/userSearch}" th:object="${userSearchForm}">
-			<label>ユーザーID</label>
-			<input type="text">
-			<br>
-			<label>ユーザー名</label>
-			<input type="text">
-			<br>
-			<button class="btn btn-primary" type="submit">検索</button>
-			<a class="btn btn-secondary" th:href="@{/userMaster}">クリア</a>
+				<div class="form-group row">
+					<label class="col-sm-2 col-form-label text-right">ユーザーID</label>
+					<input type="text" th:field="*{userId}">
+				</div>
+				<div class="form-group">
+					<label>ユーザー名</label>
+					<input type="text" th:field="*{userName}">
+				</div>
+				<button class="btn btn-primary" type="submit">検索</button>
+				<a class="btn btn-secondary" th:href="@{/userMaster}">クリア</a>
 			</form>
 		</div>
 		<label class="text-info" th:text="${result}">結果表示</label>
