--- a/bin/main/templates/manage/componentMaster.html
+++ b/bin/main/templates/manage/componentMaster.html
@@ -12,19 +12,26 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label text-right">構成品ID</label>
 					<div class="col-sm-7">
-						<input type="text" class="form-control">
+						<input type="text" class="form-control" th:field="*{componentId}">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">構成品コード</label>
+					<label class="col-sm-2 col-form-label text-right" th:field="*{componentCd}">構成品コード</label>
 					<div class="col-sm-7">
 						<input type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">商品名</label>
+					<label class="col-sm-2 col-form-label text-right" th:field="*{componentName}">商品名</label>
 					<div class="col-sm-7">
 						<input type="text" class="form-control">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-2 col-form-label text-right">取扱状態</label>
+					<div th:each="status:${radioComponentStatus}" class="form-check-inline">
+						<input type="radio" name="radioComponentStatus" th:text="${status.key}"
+						 th:value="${status.value}" th:field="*{componentStatus}" class="form-check-input">
 					</div>
 				</div>
 				<div class="container">
