update button color of componentList

--- a/bin/main/templates/manage/componentMaster.html
+++ b/bin/main/templates/manage/componentMaster.html
@@ -44,7 +44,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div class="container">
 					<button class="btn btn-primary" type="submit">検  索</button>
 					<a class="btn btn-secondary" th:href="@{/componentMaster}">クリア</a>
-					<a class="btn btn-warning" th:href="@{/componentList}">構成品一覧</a>
+					<a class="btn btn-info" th:href="@{/componentList}">構成品一覧</a>
 					<a class="btn btn-success" th:href="@{/registComponent}">新規登録</a>
 				</div>
 			</form>
