--- a/bin/main/templates/manage/componentMaster.html
+++ b/bin/main/templates/manage/componentMaster.html
@@ -66,8 +66,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					<td th:text="${comp.componentId}"></td>
 					<td th:text="${comp.componentCd}"></td>
 					<td th:text="${comp.componentName}"></td>
-					<td th:text="${radioFoodFlag.key}" th:value="${comp.foodFlag}"></td>
-					<td th:text="${radioComponentStatus.key}" th:value="${comp.componentStatus}"></td>
+					<td th:text="${comp.foodFlag}?'食品':'食品以外'"></td>
+					<td th:text="(${comp.componentStatus}==0)?'取扱い可能':
+					((${comp.componentStatus}==1)?'終売予定':'終了')"></td>
 					<td>
 						<a class="btn btn-primary btn-sm" th:href="@{'/updateComponent/'+${comp.componentId}}">編集</a>
 					</td>
