--- a/src/main/resources/templates/manage/updateUser.html
+++ b/src/main/resources/templates/manage/updateUser.html
@@ -8,7 +8,6 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<div th:fragment="updateUser_contents">
 		<div class="page-header">
 			<h1>ユーザー編集画面</h1>
-			<a th:href="@{/userMaster}">戻る</a>
 		</div>
 		<br>
 		<form th:action="@{/updateUser}" method="post" th:object="${updateUserForm}">
@@ -40,6 +39,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				</li>
 			</ul>
 			<button class="btn btn-primary" type="submit">更新</button>
+			<a class="btn btn-secondary" th:href="@{/userMaster}">戻る</a>
 		</form>
 	</div>
 </body>
