--- a/bin/main/templates/manage/componentMaster.html
+++ b/bin/main/templates/manage/componentMaster.html
@@ -10,42 +10,44 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 			<h1>構成品検索画面</h1>
 			<form method="post" th:action="@{/componentSearch}" th:object="${componentSearchForm}">
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">構成品ID</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成品ID</label>
 					<div class="col-sm-7">
-						<input type="text" class="form-control" th:field="*{componentId}">
+						<input type="text" class="form-control form-control-sm" th:field="*{componentId}">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right" th:field="*{componentCd}">構成品コード</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right"
+					th:field="*{componentCd}">構成品コード</label>
 					<div class="col-sm-7">
-						<input type="text" class="form-control">
+						<input type="text" class="form-control form-control-sm">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right" th:field="*{componentName}">商品名</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right"
+					th:field="*{componentName}">商品名</label>
 					<div class="col-sm-7">
-						<input type="text" class="form-control">
+						<input type="text" class="form-control form-control-sm">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">食品フラグ</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">食品フラグ</label>
 					<div th:each="flg:${radioFoodFlag}" class="form-check-inline">
 						<input type="radio" name="radioFoodFlag" th:text="${flg.key}"
 						 th:value="${flg.value}" th:field="*{foodFlag}" class="form-check-input">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">取扱状態</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">取扱状態</label>
 					<div th:each="status:${radioComponentStatus}" class="form-check-inline">
 						<input type="radio" name="radioComponentStatus" th:text="${status.key}"
 						 th:value="${status.value}" th:field="*{componentStatus}" class="form-check-input">
 					</div>
 				</div>
 				<div class="container">
-					<button class="btn btn-primary" type="submit">検  索</button>
-					<a class="btn btn-secondary" th:href="@{/componentMaster}">クリア</a>
-					<a class="btn btn-info" th:href="@{/componentList}">構成品一覧</a>
-					<a class="btn btn-success" th:href="@{/registComponent}">新規登録</a>
+					<button class="btn btn-primary btn-sm" type="submit">検　索</button>
+					<a class="btn btn-info btn-sm" th:href="@{/componentList}">一　覧</a>
+					<a class="btn btn-secondary btn-sm" th:href="@{/componentMaster}">クリア</a>
+					<a class="btn btn-success btn-sm" th:href="@{/registComponent}">新規登録</a>
 				</div>
 			</form>
 		</div>
