refactoring homeLayout title

--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -9,7 +9,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<script th:src="@{/webjars/bootstrap/4.4.1/js/bootstrap.min.js}"></script>
 <!-- CSSの設定 -->
 <link th:href="@{/css/home.css}" rel="stylesheet"></link>
-<title>Home</title>
+<title>SampleTools</title>
 </head>
 <body>
 <!-- header -->
