--- a/src/main/resources/templates/login/homeLayout.html
+++ b/src/main/resources/templates/login/homeLayout.html
@@ -47,7 +47,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- contents -->
 	<div class="containar-fluid">
 		<div class="row">
-			<div class="col-md-10 offset-2 main">
+			<div class="col-md-10 offset-2 main overflow-auto">
 				<div th:include="__${contents}__"></div>
 			</div>
 		</div>
