--- a/src/main/resources/templates/manage/itemMaster.html
+++ b/src/main/resources/templates/manage/itemMaster.html
@@ -26,25 +26,23 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成区分</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成区分：</label>
 					<div th:each="flg:${radioCompositeFlag}" class="form-check-inline">
 						<input type="radio" name="radioCompositeFlag" th:text="${flg.key}"
 						 th:value="${flg.value}" th:field="*{compositeFlag}" class="form-check-input">
 					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-sm-2 col-form-label col-form-label-sm text-right">取扱状態</label>
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">取扱状態：</label>
 					<div th:each="status:${radioItemStatus}" class="form-check-inline">
 						<input type="radio" name="radioItemStatus" th:text="${status.key}"
 						 th:value="${status.value}" th:field="*{itemStatus}" class="form-check-input">
 					</div>
 				</div>
-				<div class="form-group row">
+				<div class="form-group row small">
 					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成品ID</label>
-					<div class="col-sm-7 row">
+					<div class="col-sm-10 row">
 						<input type="text" class="col-sm-2 form-control form-control-sm" th:field="*{compId}"
 						th:text="${compResult}">
-						<p class="form-control-sm">　(完全一致検索)　</p>
+						<p class="form-control-sm">(完全一致検索)　</p>
 						<a class="btn btn-primary btn-sm form-control-sm" th:href="@{/searchComp}">構成品ID検索</a>
 					</div>
 				</div>
@@ -54,6 +52,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					<a class="btn btn-secondary btn-sm" th:href="@{/itemMaster}">クリア</a>
 					<a class="btn btn-success btn-sm" th:href="@{/registItem}">新規登録</a>
 				</div>
+				<ul>
+					<li class="small" th:each="error:${#fields.detailedErrors()}">
+						<span class="text-danger" th:if="${#fields.hasErrors()}" th:text="${error.message}">
+						error message</span>
+					</li>
+				</ul>
 			</form>
 		</div>
 		<label class="text-info" th:text="${result}">結果表示</label>
