refactoring name item -> product

--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -35,10 +35,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					<a th:href="@{/userMaster}">ユーザー管理</a>
 					</li>
 					<li class="nav-item" role="presentation">
-					<a th:href="@{/itemMaster}">商品マスタ</a>
-					</li>
-					<li class="nav-item" role="presentation">
-					<a th:href="@{/componentMaster}">構成品マスタ</a>
+					<a th:href="@{/productMaster}">商品マスタ</a>
 					</li>
 				</ul>
 			</div>
