--- a/bin/main/templates/datelog/datelogSearch.html
+++ b/bin/main/templates/datelog/datelogSearch.html
@@ -5,10 +5,10 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <meta charset="UTF-8">
 </head>
 <body>
-	<div th:fragment="productMaster_contents">
+	<div th:fragment="datelogSearch_contents">
 		<div class="page-header">
-			<h1>商品検索画面</h1>
-			<form method="post" th:action="@{/productSearch}" th:object="${productSearchForm}">
+			<h1>履歴検索画面＜商品用＞</h1>
+			<form method="post" th:action="@{/datelogSearch}" th:object="${datelogSearchForm}">
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label col-form-label-sm text-right">商品ID</label>
 					<div class="col-sm-2">
