--- a/src/main/resources/templates/master/productDetail.html
+++ b/src/main/resources/templates/master/productDetail.html
@@ -68,6 +68,18 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					</div>
 				</div>
 				<div class="form-group row">
+					<label class="col-sm-2 col-form-label col-form-label-sm text-right">使用許可日数</label>
+					<div class="col-sm-4" th:classappend="${#fields.hasErrors('productName')}?'has-error'">
+						<input type="number" class="form-control form-control-sm" th:field="*{permitPeriod}">
+						<ul>
+							<li th:each="error:${#fields.detailedErrors('permitPeriod')}">
+								<span class="text-danger" th:if="${#fields.hasErrors('permitPeriod')}"
+									th:text="${error.message}">permitPeriod error</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="form-group row">
 					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成品ID-1</label>
 					<div class="col-sm-7 row">
 						<input type="text" class="col-sm-2 form-control form-control-sm" th:field="*{comp1}">
