--- a/src/main/resources/templates/master/productMaster.html
+++ b/src/main/resources/templates/master/productMaster.html
@@ -47,10 +47,10 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div class="form-group row small">
 					<label class="col-sm-2 col-form-label col-form-label-sm text-right">構成品ID</label>
 					<div class="col-sm-10 row">
-						<input type="text" class="col-sm-2 form-control form-control-sm" th:field="*{compId}"
-						th:text="${compResult}">
-						<p class="form-control-sm">(完全一致検索)　</p>
-						<a class="btn btn-primary btn-sm form-control-sm" th:href="@{/searchProduct/Comp}">商品ID検索</a>
+						<input type="text" class="col-sm-2 form-control form-control-sm" th:field="*{compId}">
+						<p class="form-control-sm">　</p>
+						<a class="btn btn-primary btn-sm form-control-sm" th:href="@{/productMaster}"
+						target="_blank" rel="noopener">商品ID検索</a>
 					</div>
 				</div>
 				<div class="container">
